part1/e1_e3_e7/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: p1e3-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ex3
  template:
    metadata:
      labels:
        app: ex3
    spec:
      containers:
        - name: ex3
          image: mcfizh/dwk-part1:exercise1
