part1/e1_e3_e7/manifests/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: ex7-svc
spec:
  type: ClusterIP
  selector:
    app: ex3
  ports:
  - port: 2345
    protocol: TCP
    targetPort: 3000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ex7-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: ex7-svc
          servicePort: 2345
